# panel-bootstrap-vue

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  vue-example.ipynb
panel_bootstrap_vue/: __init__.py  button.py  dropdown.py  form.py  layout.py  nav.py  page.py
panel_bootstrap_vue/assets/typography/fonts/: unicode_literals.py
panel_bootstrap_vue/www/typography/: core.css  core.min.css
panel_bootstrap_vue/www/vue/: bootstrap-vue.min.js
www/vue/: vue-pivot-table-0.3.0.browser.js
