[tool.poetry]
name = "panel-bootstrap-vue"
version = "0.1.0"
description = "Use bootstrap-vue VueJs components supporting Bootstrap 4 in Panel templates."
authors = ["Paulo Lopes <paulopes00@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
panel = "^0.9.7"
panel-components = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
